Stopping point for new layout

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 
-  {{ super() }}
+{% block tabs %}
+  {# Tabs are now rendered within the sidebar, so override to prevent duplicate rendering #}
+{% endblock %}
 
