test for relative url

--- a/home.html
+++ b/home.html
@@ -158,7 +158,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
       <div class="home-header-hero-text whats-hot">
         <h2>
           <img
-            src="/images/logos/doc-sections/loudspeaker.svg"
+            src="{{ '/images/logos/doc-sections/loudspeaker.svg' | relative_url }}"
             width="32px"
           />&nbsp; Join us for Hacktoberfest 2023!
         </h2>
@@ -203,7 +203,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
 
       <div id="wiremock-cloud" class="wiremock-cloud-details">
         <img
-          src="/assets/svg/cloud-logo.svg"
+          src="{{ '/assets/svg/cloud-logo.svg' | relative_url }}"
           |
           alt="wiremock cloud logo"
           class="logo"
