--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
       <div class="home-hero__box">
         <h2 class="home-hero__heading">
           <img
-            src="/assets/svg/source.svg"
+            src="{{ '/assets/svg/source.svg' | relative_url }}"
             alt="source"
             class="home-hero__icon"
           />
@@ -44,7 +44,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
       <div class="home-hero__box home-hero__box--alt">
         <h2 class="home-hero__heading">
           <img
-            src="/assets/svg/cloud.svg"
+            src="{{ '/assets/svg/cloud.svg' | relative_url }}"
             alt="cloud"
             class="home-hero__icon"
           />
@@ -127,7 +127,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
       </div>
       <div class="home-header-hero-text whats-hot">
         <h2>
-          <img src="/images/logos/doc-sections/loudspeaker.svg" alt="Image of a loud speaker" width="32px"/>&nbsp;
+          <img src="{{ '/images/logos/doc-sections/loudspeaker.svg' | relative_url }}" alt="Image of a loud speaker" width="32px"/>&nbsp;
           What's <b style="color:red;">NEW</b>? <a href="https://docs.wiremock.io/grpc/overview/?utm_source=oss&utm_medium=oss&utm_campaign=oss-homepage-grpc&utm_id=oss-homepage-grpc&utm_term=oss-homepage-grpc&utm_content=oss-homepage-grpc" target="_BLANK">Cloud GRPC Support</a></h2>
         <p>
           WireMock Cloud now natively supports GRPC.
@@ -160,7 +160,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
 
       <div id="wiremock-cloud" class="wiremock-cloud-details">
         <img
-          src="/assets/svg/cloud-logo.svg"
+          src="{{ '/assets/svg/cloud-logo.svg' | relative_url }}"
           |
           alt="wiremock cloud logo"
           class="logo"
