--- a/start.html
+++ b/start.html
@@ -25,7 +25,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
       <div class="home-hero__box">
         <h2 class="home-hero__heading">
           <img
-            src="/assets/svg/source.svg"
+            src="{{ '/assets/svg/source.svg' | relative_url }}"
             alt="source"
             class="home-hero__icon"
           />
@@ -44,7 +44,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
       <div class="home-hero__box home-hero__box--alt">
         <h2 class="home-hero__heading">
           <img
-            src="/assets/svg/cloud.svg"
+            src="{{ '/assets/svg/cloud.svg' | relative_url }}"
             alt="cloud"
             class="home-hero__icon"
           />
@@ -134,7 +134,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
       <div class="home-header-hero-text whats-hot">
         <h2>
           <img
-            src="/images/logos/doc-sections/loudspeaker.svg"
+            src="{{ '/images/logos/doc-sections/loudspeaker.svg' | relative_url }}"
             width="32px"
           />&nbsp; Join us for Hacktoberfest 2023!
         </h2>
@@ -179,7 +179,7 @@ header_signup_link: "https://www.wiremock.io/cloud-overview?utm_source=wiremock.
 
       <div id="wiremock-cloud" class="wiremock-cloud-details">
         <img
-          src="/assets/svg/cloud-logo.svg"
+          src="{{ '/assets/svg/cloud-logo.svg' | relative_url }}"
           |
           alt="wiremock cloud logo"
           class="logo"
